<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_insertar_tareas" android:scrollbars="vertical">

    <EditText
        android:id="@+id/txtTituloTarea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="92dp"
        android:layout_marginRight="92dp"
        android:ems="10"
        android:hint="@string/txt_titulo"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtDescripTarea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTituloTarea"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="92dp"
        android:layout_marginRight="92dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/txt_descripcion"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btnFecha"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtDescripTarea"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="92dp"
        android:layout_marginRight="95dp"
        android:text="@string/txt_btnFecha" />

    <Button
        android:id="@+id/btnRecordatorios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnFecha"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="92dp"
        android:layout_marginRight="94dp"
        android:text="@string/txt_btnRecordatorios" />

    <Button
        android:id="@+id/btnInsertarTarea"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginBottom="24dp"
        android:text="@string/txt_btnInsertar" />

    <ImageButton
        android:id="@+id/btnAdjuntarTarea"
        android:layout_width="48dp"
        android:layout_height="46dp"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="23dp"
        android:layout_marginBottom="25dp"
        android:layout_toStartOf="@+id/btnFotoTarea"
        android:layout_toLeftOf="@+id/btnFotoTarea"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_attach_file_black_24dp" />

    <ImageButton
        android:id="@+id/btnFotoTarea"
        android:layout_width="48dp"
        android:layout_height="46dp"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="25dp"
        android:layout_toStartOf="@+id/btnInsertarTarea"
        android:layout_toLeftOf="@+id/btnInsertarTarea"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_photo_camera_black_24dp" />

    <ImageButton
        android:id="@+id/btnAudioTarea"
        android:layout_width="48dp"
        android:layout_height="46dp"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="25dp"
        android:layout_toStartOf="@+id/btnAdjuntarTarea"
        android:layout_toLeftOf="@+id/btnAdjuntarTarea"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_mic_black_24dp" />

    <ImageButton
        android:id="@+id/btnProbar"
        android:layout_width="48dp"
        android:layout_height="46dp"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-23dp"
        android:layout_marginRight="-23dp"
        android:layout_marginBottom="59dp"
        android:layout_toStartOf="@+id/btnAudioTarea"
        android:layout_toLeftOf="@+id/btnAudioTarea"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_mic_black_24dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="318dp"
        android:layout_height="241dp"
        android:layout_above="@+id/btnFotoTarea"
        android:layout_below="@+id/btnRecordatorios"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="82dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="41dp"
        android:layout_marginBottom="30dp" />

</RelativeLayout>