<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActualizarNotas">

    <EditText
        android:id="@+id/txtTituloNotaAct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="106dp"
        android:layout_marginRight="106dp"
        android:ems="10"
        android:hint="@string/txt_titulo"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtDescripNotaAct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTituloNotaAct"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="106dp"
        android:layout_marginRight="106dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/txt_descripcion"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btnActualizarNota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginBottom="24dp"
        android:text="@string/txt_btnActualizar" />

    <ImageButton
        android:id="@+id/btnAdjuntarNotaAct"
        android:layout_width="48dp"
        android:layout_height="46dp"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="41dp"
        android:layout_marginBottom="26dp"
        android:layout_toStartOf="@+id/btnFotoNotaAct"
        android:layout_toLeftOf="@+id/btnFotoNotaAct"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_attach_file_black_24dp" />

    <ImageButton
        android:id="@+id/btnFotoNotaAct"
        android:layout_width="48dp"
        android:layout_height="46dp"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="27dp"
        android:layout_toStartOf="@+id/btnActualizarNota"
        android:layout_toLeftOf="@+id/btnActualizarNota"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_photo_camera_black_24dp" />

    <ImageButton
        android:id="@+id/btnAudioNotaAct"
        android:layout_width="48dp"
        android:layout_height="46dp"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="25dp"
        android:layout_toStartOf="@+id/btnAdjuntarNotaAct"
        android:layout_toLeftOf="@+id/btnAdjuntarNotaAct"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_mic_black_24dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerNotaAct"
        android:layout_width="wrap_content"
        android:layout_height="378dp"
        android:layout_above="@+id/btnFotoNotaAct"
        android:layout_below="@+id/txtDescripNotaAct"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="33dp"

        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginBottom="34dp"
        android:scrollbars="vertical" />

</RelativeLayout>